# table-evaluator

./: .buildinfo  .commitlintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Example.ipynb  GEMINI.md  LICENSE  Makefile  PLAN.md  PRODUCTION_GUIDE.md  README.md  RELEASE_NOTES_v1.9.0.md  TASKS.md  benchmark_dython_comparison.py  example.py  example_table_evaluator.ipynb  genindex.html  index.html  metrics.html  objects.inv  plots.html  poetry.toml  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  simple_test.py  style.css  table_evaluator.html  test_phase1_integration.py  utils.html  viz.html
.cursor/rules/isolation_rules/: main-optimized.mdc  main.mdc
.cursor/rules/isolation_rules/Core/: command-execution.mdc  complexity-decision-tree.mdc  creative-phase-enforcement.mdc  creative-phase-metrics.mdc  file-verification.mdc  hierarchical-rule-loading.mdc  mode-transition-optimization.mdc  optimization-integration.mdc  platform-awareness.mdc
.cursor/rules/isolation_rules/Level1/: optimized-workflow-level1.mdc  quick-documentation.mdc  workflow-level1.mdc
.cursor/rules/isolation_rules/Level2/: archive-basic.mdc  reflection-basic.mdc  task-tracking-basic.mdc  workflow-level2.mdc
.cursor/rules/isolation_rules/Level3/: archive-intermediate.mdc  implementation-intermediate.mdc  planning-comprehensive.mdc  reflection-intermediate.mdc  task-tracking-intermediate.mdc  workflow-level3.mdc
.cursor/rules/isolation_rules/Level4/: architectural-planning.mdc  archive-comprehensive.mdc  phased-implementation.mdc  reflection-comprehensive.mdc  task-tracking-advanced.mdc  workflow-level4.mdc
.cursor/rules/isolation_rules/Phases/CreativePhase/: creative-phase-architecture.mdc  optimized-creative-template.mdc
.cursor/rules/isolation_rules/visual-maps/: archive-mode-map.mdc  creative-mode-map.mdc  implement-mode-map.mdc  plan-mode-map.mdc  qa-mode-map.mdc  reflect-mode-map.mdc  van-mode-map.mdc
.cursor/rules/isolation_rules/visual-maps/van_mode_split/: van-complexity-determination.mdc  van-file-verification.mdc  van-mode-map.mdc  van-platform-detection.mdc  van-qa-main.mdc  (+1 more)
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md
.github/workflows/: auto-version.yml  claude-code-review.yml  claude.yml  code-quality-security.yml  documentation-publish.yml  python-publish.yml  run-tests.yml  security.yml
_sources/: index.rst.txt
_static/: documentation_options.js
benchmarks/: README.md  benchmark_performance.py  privacy_performance_benchmark.py
custom_modes/: creative_instructions.md  implement_instructions.md  mode_switching_analysis.md  plan_instructions.md  reflect_archive_instructions.md  van_instructions.md
data/: fake_test_sample.csv  real_test_sample.csv
data/tests/: fake_associations.csv  fake_associations.parquet  fake_associations_theil.csv  fake_associations_theil.parquet  fake_test_sample_numerical_encoded.csv  fake_test_sample_numerical_encoded.parquet  real_associations.csv  real_associations.parquet  real_associations_theil.csv  real_associations_theil.parquet  real_test_sample_numerical_encoded.csv  real_test_sample_numerical_encoded.feather  real_test_sample_numerical_encoded.parquet
docs/: requirements.txt
docs/source/: advanced_metrics.rst  conf.py  index.rst  metrics.rst  performance_optimization.rst  plots.rst  requirements.txt  table_evaluator.rst  utils.rst  viz.rst
docs2/source/: helper_functions.rst  table_evaluator.rst
gh-pages/: genindex.html  index.html  search.html  table_evaluator.html  viz.html
gh-pages/_sources/: metrics.rst.txt  utils.rst.txt
gh-pages/_static/: documentation_options.js
notebooks/: Jupyter-UI.ipynb  KL-divergence-test.ipynb
table_evaluator/: TEST_jac_sim.ipynb  __init__.py  association_metrics.py  helpers.py  metrics.py  notebook.py  plots.py  table_evaluator.py  utils.py  viz.py
table_evaluator/advanced_metrics/: __init__.py  mmd.py  privacy_attacks.py  textual.py  wasserstein.py
table_evaluator/backends/: __init__.py  backend_context.py  backend_factory.py  backend_manager.py  backend_types.py  base_backend.py  conversion_bridge.py  data_bridge.py  dataframe_wrapper.py  dtype_bridge.py  feature_flags.py  lazy_conversion.py  pandas_backend.py  polars_backend.py  schema_validator.py
table_evaluator/core/: __init__.py  evaluation_config.py
table_evaluator/data/: __init__.py  data_converter.py
table_evaluator/evaluators/: __init__.py  advanced_privacy.py  advanced_statistical.py  ml_evaluator.py  privacy_evaluator.py  statistical_evaluator.py  textual_evaluator.py
table_evaluator/evaluators/models/: __init__.py  comprehensive_models.py  ml_models.py  privacy_models.py  statistical_models.py  textual_models.py
table_evaluator/metrics/: __init__.py  ml.py  mmd.py  privacy.py  privacy_attacks.py  statistical.py  textual.py  wasserstein.py
table_evaluator/models/: __init__.py  comprehensive_models.py  error_models.py  ml_result_models.py  privacy_models.py  privacy_result_models.py  statistical_result_models.py  textual_models.py
table_evaluator/plugins/: __init__.py  base_metric.py  plugin_manager.py
table_evaluator/plugins/builtin/: __init__.py  mmd_plugin.py  privacy_plugin.py  wasserstein_plugin.py
table_evaluator/visualization/: __init__.py  layout_utils.py  visualization_manager.py
tests/: Untitled.ipynb  create_test_data.ipynb  helpers_test.py  metrics_test.py  plots_test.py  sanity_check_example.ipynb  table_evaluator_test.py  test_backends.py  test_conversion_bridge.py  test_dython_compatibility.py  test_edge_cases.py  test_evaluators.py  test_integration_workflows.py  test_metrics.py  test_plots.py  test_privacy_models.py  test_table_evaluator.py  test_textual_evaluator.py  test_textual_integration.py  test_utils.py  test_verifications.ipynb  test_version.py  test_visualization_manager.py  utils_test.py
tests/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
tests/polars/: test_polars_backend.py  test_polars_lazy.py
(+9 files in other folders)
